@@ -1,6 +1,7 @@
 package bui.dev.rhymcaffer.service;
 
 import bui.dev.rhymcaffer.dto.request.TrackRequest;
+import bui.dev.rhymcaffer.dto.response.BaseResponse;
 import bui.dev.rhymcaffer.dto.response.TrackResponse;
 import bui.dev.rhymcaffer.model.*;
 import bui.dev.rhymcaffer.repository.*;
@@ -16,137 +17,351 @@ import java.util.stream.Collectors;
 @RequiredArgsConstructor
 public class TrackService {
 
-    private final TrackRepository trackRepository;
-    private final AlbumRepository albumRepository;
-    private final ArtistRepository artistRepository;
-    private final UserRepository userRepository;
+        private final TrackRepository trackRepository;
+        private final AlbumRepository albumRepository;
+        private final ArtistRepository artistRepository;
+        private final UserRepository userRepository;
 
-    @Transactional
-    public TrackResponse createTrack(TrackRequest request) {
-        Album album = null;
-        if (request.getAlbumId() != null) {
-            album = albumRepository.findById(request.getAlbumId())
-                    .orElseThrow(() -> new RuntimeException("Album not found with id: " + request.getAlbumId()));
+        @Transactional
+        public BaseResponse<Void> createTrack(TrackRequest request) {
+                try {
+                        Track track = Track.builder()
+                                        .name(request.getName())
+                                        .imageUrl(request.getImageUrl())
+                                        .durationMs(request.getDurationMs())
+                                        .popularity(request.getPopularity())
+                                        .previewUrl(request.getPreviewUrl())
+                                        .trackNumber(request.getTrackNumber())
+                                        .explicit(request.getExplicit())
+                                        .isrc(request.getIsrc())
+                                        .build();
+
+                        if (request.getAlbumId() != null) {
+                                Album album = albumRepository.findById(request.getAlbumId())
+                                                .orElseThrow(() -> new RuntimeException("Album not found"));
+                                track.setAlbum(album);
+                        }
+
+                        if (request.getArtistIds() != null && !request.getArtistIds().isEmpty()) {
+                                Set<Artist> artists = request.getArtistIds().stream()
+                                                .map(artistId -> artistRepository.findById(artistId)
+                                                                .orElseThrow(() -> new RuntimeException(
+                                                                                "Artist not found with id: "
+                                                                                                + artistId)))
+                                                .collect(Collectors.toSet());
+                                track.setArtists(artists);
+                        }
+
+                        trackRepository.save(track);
+                        return BaseResponse.<Void>builder()
+                                        .statusCode(200)
+                                        .isSuccess(true)
+                                        .message("Track created successfully")
+                                        .build();
+                } catch (Exception e) {
+                        return BaseResponse.<Void>builder()
+                                        .statusCode(400)
+                                        .isSuccess(false)
+                                        .message(e.getMessage())
+                                        .build();
+                }
         }
 
-        Track track = Track.builder()
-                .name(request.getName())
-                .imageUrl(request.getImageUrl())
-                .durationMs(request.getDurationMs())
-                .popularity(request.getPopularity())
-                .previewUrl(request.getPreviewUrl())
-                .trackNumber(request.getTrackNumber())
-                .explicit(request.getExplicit())
-                .isrc(request.getIsrc())
-                .album(album)
-                .build();
-
-        if (request.getArtistIds() != null && !request.getArtistIds().isEmpty()) {
-            Set<Artist> artists = request.getArtistIds().stream()
-                    .map(artistId -> artistRepository.findById(artistId)
-                            .orElseThrow(() -> new RuntimeException("Artist not found with id: " + artistId)))
-                    .collect(Collectors.toSet());
-            track.setArtists(artists);
+        @Transactional(readOnly = true)
+        public BaseResponse<TrackResponse> getTrack(Long id) {
+                try {
+                        Track track = trackRepository.findById(id)
+                                        .orElseThrow(() -> new RuntimeException("Track not found"));
+                        TrackResponse response = mapToResponse(track);
+                        return BaseResponse.<TrackResponse>builder()
+                                        .statusCode(200)
+                                        .isSuccess(true)
+                                        .message("Success")
+                                        .data(response)
+                                        .build();
+                } catch (RuntimeException e) {
+                        return BaseResponse.<TrackResponse>builder()
+                                        .statusCode(404)
+                                        .isSuccess(false)
+                                        .message(e.getMessage())
+                                        .build();
+                }
         }
 
-        track = trackRepository.save(track);
-        return mapToResponse(track);
-    }
+        @Transactional(readOnly = true)
+        public BaseResponse<List<TrackResponse>> getAllTracks() {
+                try {
+                        List<Track> tracks = trackRepository.findAll();
+                        List<TrackResponse> responses = tracks.stream()
+                                        .map(this::mapToResponse)
+                                        .toList();
+                        return BaseResponse.<List<TrackResponse>>builder()
+                                        .statusCode(200)
+                                        .isSuccess(true)
+                                        .message("Success")
+                                        .data(responses)
+                                        .build();
+                } catch (Exception e) {
+                        return BaseResponse.<List<TrackResponse>>builder()
+                                        .statusCode(500)
+                                        .isSuccess(false)
+                                        .message("Failed to retrieve tracks: " + e.getMessage())
+                                        .build();
+                }
+        }
 
-    @Transactional(readOnly = true)
-    public TrackResponse getTrack(Long id) {
-        Track track = trackRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Track not found"));
-        return mapToResponse(track);
-    }
+        @Transactional(readOnly = true)
+        public BaseResponse<List<TrackResponse>> searchTracks(String name) {
+                try {
+                        List<Track> tracks = trackRepository.findByNameContainingIgnoreCase(name);
+                        List<TrackResponse> responses = tracks.stream()
+                                        .map(this::mapToResponse)
+                                        .toList();
+                        return BaseResponse.<List<TrackResponse>>builder()
+                                        .statusCode(200)
+                                        .isSuccess(true)
+                                        .message("Success")
+                                        .data(responses)
+                                        .build();
+                } catch (Exception e) {
+                        return BaseResponse.<List<TrackResponse>>builder()
+                                        .statusCode(400)
+                                        .isSuccess(false)
+                                        .message("Search failed: " + e.getMessage())
+                                        .build();
+                }
+        }
 
-    @Transactional(readOnly = true)
-    public List<TrackResponse> getAllTracks() {
-        return trackRepository.findAll().stream()
-                .map(this::mapToResponse)
-                .collect(Collectors.toList());
-    }
+        @Transactional(readOnly = true)
+        public BaseResponse<List<TrackResponse>> getTracksByArtist(Long artistId) {
+                try {
+                        List<Track> tracks = trackRepository.findByArtists_Id(artistId);
+                        List<TrackResponse> responses = tracks.stream()
+                                        .map(this::mapToResponse)
+                                        .toList();
+                        return BaseResponse.<List<TrackResponse>>builder()
+                                        .statusCode(200)
+                                        .isSuccess(true)
+                                        .message("Success")
+                                        .data(responses)
+                                        .build();
+                } catch (RuntimeException e) {
+                        return BaseResponse.<List<TrackResponse>>builder()
+                                        .statusCode(404)
+                                        .isSuccess(false)
+                                        .message(e.getMessage())
+                                        .build();
+                }
+        }
 
-    @Transactional(readOnly = true)
-    public List<TrackResponse> searchTracks(String name) {
-        return trackRepository.findByNameContainingIgnoreCase(name).stream()
-                .map(this::mapToResponse)
-                .collect(Collectors.toList());
-    }
+        @Transactional(readOnly = true)
+        public BaseResponse<List<TrackResponse>> getTracksByAlbum(Long albumId) {
+                try {
+                        List<Track> tracks = trackRepository.findByAlbum_Id(albumId);
+                        List<TrackResponse> responses = tracks.stream()
+                                        .map(this::mapToResponse)
+                                        .toList();
+                        return BaseResponse.<List<TrackResponse>>builder()
+                                        .statusCode(200)
+                                        .isSuccess(true)
+                                        .message("Success")
+                                        .data(responses)
+                                        .build();
+                } catch (RuntimeException e) {
+                        return BaseResponse.<List<TrackResponse>>builder()
+                                        .statusCode(404)
+                                        .isSuccess(false)
+                                        .message(e.getMessage())
+                                        .build();
+                }
+        }
 
-    @Transactional(readOnly = true)
-    public List<TrackResponse> getTracksByArtist(Long artistId) {
-        return trackRepository.findByArtistId(artistId).stream()
-                .map(this::mapToResponse)
-                .collect(Collectors.toList());
-    }
+        @Transactional(readOnly = true)
+        public BaseResponse<List<TrackResponse>> getSavedTracks(Long userId) {
+                try {
+                        List<Track> tracks = trackRepository.findBySavedByUsers_Id(userId);
+                        List<TrackResponse> responses = tracks.stream()
+                                        .map(this::mapToResponse)
+                                        .toList();
+                        return BaseResponse.<List<TrackResponse>>builder()
+                                        .statusCode(200)
+                                        .isSuccess(true)
+                                        .message("Success")
+                                        .data(responses)
+                                        .build();
+                } catch (RuntimeException e) {
+                        return BaseResponse.<List<TrackResponse>>builder()
+                                        .statusCode(404)
+                                        .isSuccess(false)
+                                        .message(e.getMessage())
+                                        .build();
+                }
+        }
 
-    @Transactional(readOnly = true)
-    public List<TrackResponse> getTracksByAlbum(Long albumId) {
-        return trackRepository.findByAlbumId(albumId).stream()
-                .map(this::mapToResponse)
-                .collect(Collectors.toList());
-    }
+        @Transactional(readOnly = true)
+        public BaseResponse<List<TrackResponse>> getPopularTracks(int minPopularity) {
+                try {
+                        List<Track> tracks = trackRepository.findByPopularityGreaterThanEqual(minPopularity);
+                        List<TrackResponse> responses = tracks.stream()
+                                        .map(this::mapToResponse)
+                                        .toList();
+                        return BaseResponse.<List<TrackResponse>>builder()
+                                        .statusCode(200)
+                                        .isSuccess(true)
+                                        .message("Success")
+                                        .data(responses)
+                                        .build();
+                } catch (Exception e) {
+                        return BaseResponse.<List<TrackResponse>>builder()
+                                        .statusCode(400)
+                                        .isSuccess(false)
+                                        .message("Failed to get popular tracks: " + e.getMessage())
+                                        .build();
+                }
+        }
 
-    @Transactional(readOnly = true)
-    public List<TrackResponse> getSavedTracks(Long userId) {
-        return trackRepository.findSavedTracks(userId).stream()
-                .map(this::mapToResponse)
-                .collect(Collectors.toList());
-    }
+        @Transactional
+        public BaseResponse<Void> saveTrack(Long trackId, Long userId) {
+                try {
+                        Track track = trackRepository.findById(trackId)
+                                        .orElseThrow(() -> new RuntimeException("Track not found"));
+                        User user = userRepository.findById(userId)
+                                        .orElseThrow(() -> new RuntimeException("User not found"));
 
-    @Transactional(readOnly = true)
-    public List<TrackResponse> getPopularTracks(int minPopularity) {
-        return trackRepository.findPopularTracks(minPopularity).stream()
-                .map(this::mapToResponse)
-                .collect(Collectors.toList());
-    }
+                        track.getSavedByUsers().add(user);
+                        trackRepository.save(track);
+                        return BaseResponse.<Void>builder()
+                                        .statusCode(200)
+                                        .isSuccess(true)
+                                        .message("Track saved successfully")
+                                        .build();
+                } catch (RuntimeException e) {
+                        return BaseResponse.<Void>builder()
+                                        .statusCode(404)
+                                        .isSuccess(false)
+                                        .message(e.getMessage())
+                                        .build();
+                }
+        }
 
-    @Transactional
-    public void saveTrack(Long trackId, Long userId) {
-        Track track = trackRepository.findById(trackId)
-                .orElseThrow(() -> new RuntimeException("Track not found"));
-        User user = userRepository.findById(userId)
-                .orElseThrow(() -> new RuntimeException("User not found"));
+        @Transactional
+        public BaseResponse<Void> unsaveTrack(Long trackId, Long userId) {
+                try {
+                        Track track = trackRepository.findById(trackId)
+                                        .orElseThrow(() -> new RuntimeException("Track not found"));
+                        User user = userRepository.findById(userId)
+                                        .orElseThrow(() -> new RuntimeException("User not found"));
 
-        track.getSavedByUsers().add(user);
-        trackRepository.save(track);
-    }
+                        track.getSavedByUsers().remove(user);
+                        trackRepository.save(track);
+                        return BaseResponse.<Void>builder()
+                                        .statusCode(200)
+                                        .isSuccess(true)
+                                        .message("Track unsaved successfully")
+                                        .build();
+                } catch (RuntimeException e) {
+                        return BaseResponse.<Void>builder()
+                                        .statusCode(404)
+                                        .isSuccess(false)
+                                        .message(e.getMessage())
+                                        .build();
+                }
+        }
 
-    @Transactional
-    public void unsaveTrack(Long trackId, Long userId) {
-        Track track = trackRepository.findById(trackId)
-                .orElseThrow(() -> new RuntimeException("Track not found"));
-        User user = userRepository.findById(userId)
-                .orElseThrow(() -> new RuntimeException("User not found"));
+        @Transactional
+        public BaseResponse<Void> deleteTrack(Long id) {
+                try {
+                        trackRepository.deleteById(id);
+                        return BaseResponse.<Void>builder()
+                                        .statusCode(200)
+                                        .isSuccess(true)
+                                        .message("Track deleted successfully")
+                                        .build();
+                } catch (RuntimeException e) {
+                        return BaseResponse.<Void>builder()
+                                        .statusCode(404)
+                                        .isSuccess(false)
+                                        .message(e.getMessage())
+                                        .build();
+                }
+        }
 
-        track.getSavedByUsers().remove(user);
-        trackRepository.save(track);
-    }
+        @Transactional
+        public BaseResponse<Void> updateTrack(Long id, TrackRequest request) {
+                try {
+                        Track track = trackRepository.findById(id)
+                                        .orElseThrow(() -> new RuntimeException("Track not found"));
 
-    private TrackResponse mapToResponse(Track track) {
-        return TrackResponse.builder()
-                .id(track.getId())
-                .name(track.getName())
-                .imageUrl(track.getImageUrl())
-                .durationMs(track.getDurationMs())
-                .popularity(track.getPopularity())
-                .previewUrl(track.getPreviewUrl())
-                .trackNumber(track.getTrackNumber())
-                .explicit(track.getExplicit())
-                .isrc(track.getIsrc())
-                .albumId(track.getAlbum() != null ? track.getAlbum().getId() : null)
-                .artistIds(track.getArtists().stream()
-                        .map(artist -> artist.getId())
-                        .collect(Collectors.toSet()))
-                .playlistIds(track.getPlaylists().stream()
-                        .map(playlist -> playlist.getId())
-                        .collect(Collectors.toSet()))
-                .savedByUserIds(track.getSavedByUsers().stream()
-                        .map(user -> user.getId())
-                        .collect(Collectors.toSet()))
-                .createdAt(track.getCreatedAt())
-                .updatedAt(track.getUpdatedAt())
-                .build();
-    }
-} 
+                        if (request.getName() != null) {
+                                track.setName(request.getName());
+                        }
+                        if (request.getImageUrl() != null) {
+                                track.setImageUrl(request.getImageUrl());
+                        }
+                        if (request.getDurationMs() != null) {
+                                track.setDurationMs(request.getDurationMs());
+                        }
+                        if (request.getPopularity() != null) {
+                                track.setPopularity(request.getPopularity());
+                        }
+                        if (request.getPreviewUrl() != null) {
+                                track.setPreviewUrl(request.getPreviewUrl());
+                        }
+                        if (request.getTrackNumber() != null) {
+                                track.setTrackNumber(request.getTrackNumber());
+                        }
+                        if (request.getExplicit() != null) {
+                                track.setExplicit(request.getExplicit());
+                        }
+                        if (request.getIsrc() != null) {
+                                track.setIsrc(request.getIsrc());
+                        }
+                        if (request.getAlbumId() != null) {
+                                Album album = albumRepository.findById(request.getAlbumId())
+                                                .orElseThrow(() -> new RuntimeException("Album not found"));
+                                track.setAlbum(album);
+                        }
+                        if (request.getArtistIds() != null) {
+                                Set<Artist> artists = request.getArtistIds().stream()
+                                                .map(artistId -> artistRepository.findById(artistId)
+                                                                .orElseThrow(() -> new RuntimeException(
+                                                                                "Artist not found with id: "
+                                                                                                + artistId)))
+                                                .collect(Collectors.toSet());
+                                track.setArtists(artists);
+                        }
+                        trackRepository.save(track);
+                        return BaseResponse.<Void>builder()
+                                        .statusCode(200)
+                                        .isSuccess(true)
+                                        .message("Track updated successfully")
+                                        .build();
+                } catch (RuntimeException e) {
+                        return BaseResponse.<Void>builder()
+                                        .statusCode(404)
+                                        .isSuccess(false)
+                                        .message(e.getMessage())
+                                        .build();
+                }
+        }
+
+        private TrackResponse mapToResponse(Track track) {
+                return TrackResponse.builder()
+                                .id(track.getId())
+                                .name(track.getName())
+                                .imageUrl(track.getImageUrl())
+                                .durationMs(track.getDurationMs())
+                                .popularity(track.getPopularity())
+                                .previewUrl(track.getPreviewUrl())
+                                .trackNumber(track.getTrackNumber())
+                                .explicit(track.getExplicit())
+                                .isrc(track.getIsrc())
+                                .albumId(track.getAlbum() != null ? track.getAlbum().getId() : null)
+                                .artistIds(track.getArtists().stream()
+                                                .map(artist -> artist.getId())
+                                                .collect(Collectors.toSet()))
+                                .createdAt(track.getCreatedAt())
+                                .updatedAt(track.getUpdatedAt())
+                                .build();
+        }
+}
